--- a/decision_tree_regressor_hitters.ipynb
+++ b/decision_tree_regressor_hitters.ipynb
@@ -1414,8 +1414,15 @@
    "metadata": {},
    "source": [
     "## Resources:\n",
-    "\n"
+    "\n",
+    "- [An Introduction to Statistical Learning](https://www.statlearning.com/)\n",
+    "- [Kaggle Hitters dataset](https://www.kaggle.com/datasets/floser/hitters)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
