--- a/decision_tree_regressor_hitters.ipynb
+++ b/decision_tree_regressor_hitters.ipynb
@@ -1416,7 +1416,8 @@
     "## Resources:\n",
     "\n",
     "- [An Introduction to Statistical Learning](https://www.statlearning.com/)\n",
-    "- [Kaggle Hitters dataset](https://www.kaggle.com/datasets/floser/hitters)"
+    "- [Kaggle Hitters dataset](https://www.kaggle.com/datasets/floser/hitters)\n",
+    "- [Lecture 10 - Decision Trees and Ensemble Methods | Stanford CS229: Machine Learning (Autumn 2018)](https://www.youtube.com/watch?v=wr9gUr-eWdA)"
    ]
   },
   {
